//
// Copyright 2021 DXOS.org
//

syntax = "proto3";

package dxos.echo.metadata;

import "google/protobuf/timestamp.proto";

import "../halo/keys.proto";
import "../halo/credentials.proto";

message EchoMetadata {
  /**
   * Version number that is inceremnted every time there's a breaking change to the storage schema.
   *
   * This is used to detect if the storage schema has changed since the last time the client was run.
   * Loading data from a different version will might result in an error.
   */
  int32 version = 1;

  google.protobuf.Timestamp created = 2;
  google.protobuf.Timestamp updated = 3;

  // TODO(dmaretskyi): Store the device key associated with the identity.
  optional IdentityRecord identity = 10;

  /// List of the data parties.
  repeated PartyMetadata parties = 11;
}

// TODO(dmaretskyi): Cleanup numbering.
message PartyMetadata {
  SpaceRecord record = 1;

  /// Key of the wriatable control feed.
  optional PubKey control_feed_key = 4;

  /// Key of the wriatable data feed.
  optional PubKey data_feed_key = 3;

  // Latest timeframe reached while processing party messages.
  optional TimeframeVector latest_timeframe = 5;
}
